2017-01-25  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Use C99 blanks as default argv separators, per issue [#2329].

	* setargv.c [_ISOC99_SOURCE]: Require it.
	(__mingw32_setargv): Separate command line arguments based on...
	[(quoted == 0) && isblank( c )]: ...this condition, instead of on...
	[(quoted == 0) && isspace( c )]: ...this, so that only blanks, rather
	than any whitespace characters, serve as default argument separators.

2017-01-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct <strings.h> preprocessor logic; fix bug [#2322]

	* include/strings.h (_stricmp, _strnicmp): Always declare, unless...
	[__STRICT_ANSI__ && __NO_INLINE__]: ...both of these are defined.

2016-11-28  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement POSIX.1 compatible setenv() and unsetenv() functions.

	* mingwex/setenv.c: New file; it implements...
	(__mingw_setenv): ...this function, providing common code for...
	* include/stdlib.h [_POSIX_C_SOURCE >= 200112L] (setenv, unsetenv):
	...these user visible functions, implemented as __CRT_ALIAS inlines;
	qualify them as __JMPSTUB__ and __LIBIMPL__ respectively, so ensuring
	that their corresponding external representations are automatically
	added to libmingwex.a

	* Makefile.in (libmingwex.a): Add setenv.$OBJEXT

2016-11-27  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Work around another C++11 compliance issue; fix bug [#2321].

	* include/excpt.h (__try1_setup, __except1_teardown): Add spaces to
	separate each use of '__wsize' and '__ts' macros from all surrounding
	string literals, to ensure that C++ parses them as distinct tokens.

2016-11-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Replace defective powf() and powl() function implementations.

	* mingwex/math/powf.c mingwex/math/powl.c: Delete; replaced by...
	* mingwex/math/pow_generic.sx: ...this new file; it implements...
	(__x87pow): ...this generic power function back-end, serving...